# userlist-python

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
src/userlist/: __init__.py  client.py  config.py  encoder.py  push.py  relation.py  resource.py
src/userlist/resources/: company.py  event.py  message.py  relationship.py  user.py
tests/: test_client.py  test_config.py  test_encoder.py  test_push.py  test_relation.py  test_userlist.py
tests/resources/: test_company.py  test_event.py  test_message.py  test_relationship.py  test_user.py
userlist/: README.md  setup.py  userlist_client.py
userlist/tests/: test_userlist.py
userlist/userlist/: __init__.py  const.py  userlist_auth.py  userlist_exception.py  utils.py
userlist_python/: __init__.py  userlist_client.py  utils.py
