[tool.poetry]
name = "userlist-python"
version = "0.2.0"
description = "Official UserList SDK for Python"
authors = ["Maksym Sugonyaka <maksym@newscatcherapi.com>", "Benedikt Deicke <benedikt@userlist.com>"]
readme = "README.md"

homepage = "https://userlist.com/"
license = "MIT"
keywords = ["Emailing", "Userlist", "marketing"]

[tool.poetry.dependencies]
python = "^3.7"
pendulum = "^1.4"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
responses = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
